flux/apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
      namespace: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
        namespace: home-assistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.7
          ports:
            - name: hass
              containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
        - name: openthread-border-router
          image: ghcr.io/ownbee/hass-otbr-docker:7e60d50
          ports:
            - name: otbr-rest
              containerPort: 8081
            - name: otbr-web
              containerPort: 8085
          securityContext:
            # needed for /dev/ttyUSB0 access
            privileged: true
            # needed for networking
            capabilities:
              add:
                - NET_ADMIN
                - SYS_ADMIN
          volumeMounts:
            - name: otbr-data
              mountPath: /data
        - name: matter
          image: ghcr.io/matter-js/matterjs-server:1.2.4
          ports:
            - name: matter
              containerPort: 5580
          volumeMounts:
            - name: matter-data
              mountPath: /data
      nodeSelector:
        thread-usb: "1"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: matter-data
          persistentVolumeClaim:
            claimName: matter-data
        - name: otbr-data
          persistentVolumeClaim:
            claimName: otbr-data
