flux/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
    namespace: home-assistant
  ports:
    - port: 8001
      targetPort: hass
    - port: 8002
      targetPort: otbr-web
